<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="androidLargeThreeVM" type="com.bcasapplication.app.modules.androidlargethree.data.viewmodel.AndroidLargeThreeVM"/>
    </data>
    <LinearLayout android:id="@+id/linearAndroidLarge"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylelight_green_50">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_62pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowfindmyfolks"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_7pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtFindmyfolks"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.05"
                    android:singleLine="true"
                    android:text="@{androidLargeThreeVM.androidLargeThreeModel.txtFindmyfolks}"
                    style="@style/txtMavenProbold35" tools:text="@string/lbl_find_my_folks"/>
                <ImageView android:id="@+id/imageUilsettingOne"
                    android:layout_height="@dimen/_25pxh"
                    android:layout_marginBottom="@dimen/_11pxv"
                    android:layout_marginStart="@dimen/_60pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="@dimen/_25pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_uil_setting"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_uil_setting"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:id="@+id/linearColumnhitherehe"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_8pxv"
            android:paddingEnd="@dimen/_19pxh"
            android:paddingStart="@dimen/_19pxh" android:paddingTop="@dimen/_8pxv">
            <TextView android:id="@+id/txtHitherehere"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="wrap_content"
                android:letterSpacing="0.02"
                android:text="@{androidLargeThreeVM.androidLargeThreeModel.txtHitherehere}"
                style="@style/txtHindMysurubold16_1" tools:text="@string/msg_hi_there_here_is"/>
            <ImageView android:id="@+id/imageImage"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_250pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="@dimen/_255pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_rectangle_4}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle_4"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnDownloadQr"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_40pxv"
                android:layout_marginTop="@dimen/_27pxv"
                android:layout_width="@dimen/_140pxh"
                android:letterSpacing="0.02"
                android:paddingBottom="@dimen/_6pxv"
                android:paddingEnd="@dimen/_17pxh"
                android:paddingStart="@dimen/_17pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@string/lbl_download_qr"
                android:textAllCaps="false"
                style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_download_qr"/>
            <View android:id="@+id/viewView"
                android:layout_height="@dimen/_148pxh" android:layout_width="@dimen/_81pxh"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtThankyou"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:letterSpacing="0.02" android:singleLine="true"
                android:text="@{androidLargeThreeVM.androidLargeThreeModel.txtThankyou}"
                style="@style/txtHindMysurubold16_1" tools:text="@string/lbl_thank_you"/>
            <View
                android:background="@drawable/rectangle_bg_black_900_radius_2"
                android:id="@+id/lineLine"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_4pxv"
                android:layout_marginTop="@dimen/_76pxv" android:layout_width="@dimen/_108pxh"/>
        </LinearLayout>
    </LinearLayout>
</layout>
